// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Customizable Form 3 text input fields with custom text 1`] = `
<form
  action="https://formspree.io/support@ezeewei.com"
  className="FormContainer__exports-dtEIQu jpGjqo"
  method="POST"
  style={Object {}}
>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU hFlUIC"
    >
      First & Last Name
    </legend>
    <input
      className="InputField__exports-fUueCr WoEdj"
      name="firstNLastName"
      placeholder="i.e. Mohammmad Ibn Uthaymeen"
      type="text"
    />
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU dNkqLj"
    >
      Email
    </legend>
    <input
      className="InputField__exports-fUueCr hIOOSe"
      name="email"
      placeholder="i.e. abc@gmail.com"
      type="email"
    />
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU hesYru"
    >
      Feedback
    </legend>
    <textarea
      className="FormTextarea__exports-jTETjq ihvfIs"
      name="feedback"
      placeholder="i.e. I saw problem with the site that..."
    />
  </section>
  <input
    className="FormSubmitButton__exports-edyJXK foCtbE"
    type="submit"
    value="Send"
  />
</form>
`;

exports[`Storyshots Customizable Form multiple mixed fields with custom text 1`] = `
<form
  action="https://formspree.io/support@ezeewei.com"
  className="FormContainer__exports-dtEIQu jpGjqo"
  method="POST"
  style={Object {}}
>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU hFlUIC"
    >
      Masjid Name
    </legend>
    <input
      className="InputField__exports-fUueCr WoEdj"
      name="masjidName"
      placeholder="i.e. Masjid Uthaymeen"
      type="text"
    />
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU hFlUIC"
    >
      Zipcode
    </legend>
    <input
      className="InputField__exports-fUueCr WoEdj"
      name="zipcode"
      placeholder="i.e. 08611"
      type="text"
    />
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU hFlUIC"
    >
      Website
    </legend>
    <input
      className="InputField__exports-fUueCr WoEdj"
      name="website"
      placeholder="i.e. http://www.masjid-name.com"
      type="text"
    />
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU hFlUIC"
    >
      Facebook
    </legend>
    <input
      className="InputField__exports-fUueCr WoEdj"
      name="facebook"
      placeholder="i.e. http://www.facebook.com/masjid-name"
      type="text"
    />
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU hFlUIC"
    >
      Twitter
    </legend>
    <input
      className="InputField__exports-fUueCr WoEdj"
      name="twitter"
      placeholder="i.e. http://www.twitter.com/masjid-name"
      type="text"
    />
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU hFlUIC"
    >
      Spreaker
    </legend>
    <input
      className="InputField__exports-fUueCr WoEdj"
      name="spreak"
      placeholder="i.e. http://www.spreaker.com/masjid-name"
      type="text"
    />
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU hFlUIC"
    >
      Mixlr
    </legend>
    <input
      className="InputField__exports-fUueCr WoEdj"
      name="mixlr"
      placeholder="i.e. http://www.mixlr.com/masjid-name"
      type="text"
    />
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU dNkqLj"
    >
      Email
    </legend>
    <input
      className="InputField__exports-fUueCr hIOOSe"
      name="email"
      placeholder="i.e. support@masjid-name.com"
      type="email"
    />
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU cxmxOX"
    >
      Phone
    </legend>
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU hFlUIC"
    >
      Paypal Donation Page
    </legend>
    <input
      className="InputField__exports-fUueCr WoEdj"
      name="paypal"
      placeholder="the page will require verification upon acceptance! in shaa Allah"
      type="text"
    />
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU dNkqLj"
    >
      Your Email
    </legend>
    <input
      className="InputField__exports-fUueCr hIOOSe"
      name="userEmail"
      placeholder="i.e. myemail@gmail.com"
      type="email"
    />
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU hFlUIC"
    >
      Your Name
    </legend>
    <input
      className="InputField__exports-fUueCr WoEdj"
      name="userName"
      placeholder="i.e. Mohammad Khalid"
      type="text"
    />
  </section>
  <section
    className="Container__exports-cGduGO fOZQpl"
  >
    <legend
      className="FormLegend__exports-jkPFQU hesYru"
    >
      Best Time To Contact
    </legend>
    <textarea
      className="FormTextarea__exports-jTETjq ihvfIs"
      name="bestTimeToContact"
      placeholder="i.e. Anytime, 5~7pm every day or type NA for no contact"
    />
  </section>
  <input
    className="FormSubmitButton__exports-edyJXK foCtbE"
    type="submit"
    value="Send"
  />
</form>
`;
